--- a/index.html
+++ b/index.html
@@ -7,13 +7,170 @@
 
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
-	
-	<title>Default</title>
+	<link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/>
+
+	<title>Thames River Anglers Assosiation</title>
 </head>
 <body>
+	<h1 class="hidden">Thames River Anglers Association Website</h1>
+	<!-- HEADER starts -->
+	<header id="mainHeader">
+		<nav id="mainNav">
+			<h2 class="hidden">Main Navigation</h2>
+
+	<!-- Burger Menu -->
+			<button id="button"></button>
+
+			<div id="burgerContent">
+				<ul class="burgerMenu">
+					<li id="index"><a href="index.html">HOME</a></li>
+					<li id="about"><a href="about.html">ABOUT US</a></li>
+					<li id="projects"><a href="#">PROJECTS</a></li>
+					<li><a href="#">GET INVOLVED</a></li>
+					<li><a href="#">NEWSLETTERS</a></li>
+					<li><a href="contactus.html">CONTACT US</a></li>
+				</ul>
+			</div>
+		</nav>
+
+		<!-- social media icons (header) -->
+		<section id="social_media_header">
+			<h2 class="hidden">Social Media Icons</h2>
+			<div id="facebook_header">
+				<a href="https://www.facebook.com/groups/4TRAA/about/" target="_blank">
+					<img src="images/facebook.png" alt="facebook icon" >
+				</a>
+			</div>
+			<div id="email_header">
+				<a href="mailto:traa@anglers.org">
+					<img src="images/email_logo.png" alt="email icon">
+				</a>
+			</div>
+		</section>
+
+		<!-- main logo (header) -->
+		<div id="logoHeader">
+			<a href="index.html">
+				<img src="images/traa_logo-MASTER.svg" alt="TRAA logo">
+			</a>
+		</div>
+
+		<div class="hero_text">
+			<h2 class="hero_title">WELCOME TO THE THAMES RIVER ANGLERS ASSOSIATION</h2>
+			<h3 class="hero_subtitle">For the enhancement, protection and promotion of a viable, multi-species fishery within the Thames River watershed.</h4>
+		</div>
+	</header>
+
+<!-- MAIN section starts -->
 	<main>
-		<h2 class="hidden">LALALALALAAAAAAA</h2>
+
+	<!-- About section -->
+		<section id="about_section">
+			<h2 class="hidden">About the T.R.A.A.</h2>
+			<h2 id="about_title">ABOUT THE T.R.A.A.</h2>
+			<div class="section_division"></div>
+			<div id="about_image"></div>
+			<div id="about_content">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris.
+				</p>
+				<button>READ MORE</button>
+			</div>
+		</section>
+
+	<!-- Events section -->
+		<section>
+			<h2 class="hidden">Events Section</h2>
+			<h2 id="events_title">UPCOMING EVENTS</h2>
+			<div class="section_division"></div>
+			<div id="events_carousel">
+			<!-- Carousel goes here!!! -->
+				<img src="images/projects-project_1-top.jpg" alt="Something">
+			</div>
+		</section>
+
+	<!-- Membership section -->
+		<section>
+			<h2 class="hidden">Memberships section</h2>
+			<h2 id="memberships_title">BECOME A MEMBER TODAY</h2>
+			<div class="section_division"></div>
+			<div id="memberships_image"></div>
+			<div id="memberships_content">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris.
+				</p>
+				<button>READ MORE</button>
+			</div>
+		</section>
+
+	<!-- Membership section -->
+	<section>
+		<h2 class="hidden">Sponsors section</h2>
+		<h2 id="sponsors_title">SPECIAL THANKS TO</h2>
+		<div class="section_division"></div>
+		<div id="sponsors_logos_container">
+			<!-- Guillevin -->
+			<a href="https://www.guillevin.com/default/" target="_blank">
+				<img id="guillevin" src="images/logo-guillevin.jpg" alt="Guillevin logo">
+			</a>
+			<!-- Melchers -->
+			<a href="https://www.melchersconstruction.com/" target="_blank">
+				<img id="melchers" src="images/logo-melchers.jpg" alt="Melchers logo">
+			</a>
+			<!-- Muma -->
+			<a href="http://www.mumamanufacturing.com/" target="_blank">
+				<img id="muma" src="images/logo-muma.jpg" alt="Muma logo">
+			</a>
+			<!-- Try Recycling -->
+			<a href="http://tryrecycling.com/" target="_blank">
+				<img id="recycling" src="images/logo-try_recycling.jpg" alt="Try recycling logo">
+			</a>
+			<!-- Angling Sports -->
+			<a href="https://anglingsports.ca/" target="_blank">
+				<img id="angling" src="images/logo-angling_sports.jpg" alt="Angling Sports logo">
+			</a>
+		</div>
+	</section>
 	</main>
+
+	<!-- FOOTER starts -->
+	<footer id="main_footer">
+		<!-- social media icons (footer) -->
+		<section id="social_media_footer">
+			<h2 class="hidden">Social Media Icons</h2>
+			<div id="facebook_footer">
+				<a href="https://www.facebook.com/groups/4TRAA/about/" target="_blank">
+					<img src="images/facebook-footer.png" alt="facebook icon" >
+				</a>
+			</div>
+			<div id="email_footer">
+				<a href="mailto:traa@anglers.org">
+					<img src="images/email_logo-footer.png" alt="email icon">
+				</a>
+			</div>
+		</section>
+
+		<!-- main logo (footer) -->
+		<div id="logoFooter">
+			<a href="index.html">
+				<img src="images/traa_logo-MASTER.svg" alt="TRAA logo">
+			</a>
+		</div>
+		<!-- back to top button -->
+		<div id="back_to_top">
+			<a href="#">Back to top</a>
+		</div>
+		<!-- footer copyrights -->
+		<div id="copyrights">
+			<h3>© Marin-Riddick Enterprises</h3>
+			<h3>Powered by Fanshawe College</h3>
+		</div>
+	</footer>
+
 
 	<script src="js/main.js"></script>
 </body>
