--- a/aboutUs.html
+++ b/aboutUs.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
@@ -61,83 +61,87 @@
 		</div>
 	</header>
 
-<!-- MAIN section starts -->
-	<main>
+  <!-- MAIN section starts -->
+  <main>
 
-	<!-- About section -->
-		<section id="about_section">
-			<h2 class="hidden">About the T.R.A.A.</h2>
-			<h2 id="about_title">ABOUT THE T.R.A.A.</h2>
-			<div class="section_division"></div>
-			<div id="about_image"></div>
-			<div id="about_content">
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris.
-				</p>
-				<button>READ MORE</button>
-			</div>
-		</section>
+    <!-- About intro   -->
+    <section>
+      <h2 class="hidden">About the T.R.A.A.</h2>
+      <h2 id="about_title" >WHO IS THE T.R.A.A.</h2>
+      <div class="section_division"></div>
+      <div id="about_content">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris.
+        </p>
+      </div>
+    </section>
 
-	<!-- Events section -->
-		<section>
-			<h2 class="hidden">Events Section</h2>
-			<h2 id="events_title">UPCOMING EVENTS</h2>
-			<div class="section_division"></div>
-			<div id="events_carousel">
-			<!-- Carousel goes here!!! -->
-				<img src="images/projects-project_1-top.jpg" alt="Something">
-			</div>
-		</section>
+    <!-- Events collapsibles -->
+    <section id="events_collapsibles">
+      <h2 class="hidden">Events details</h2>
+      <div class="collapsible_1">
+          <img src="images/about-project_1.png" alt="T.R.A.A. volunteers measuring a trout">
+      </div>
+      <div class="collapsible_2">
+        <img src="images/projects-project_2.png" alt="T.R.A.A. volunteers collecting samples">
+      </div>
+    </section>
 
-	<!-- Membership section -->
-		<section>
-			<h2 class="hidden">Memberships section</h2>
-			<h2 id="memberships_title">BECOME A MEMBER TODAY</h2>
-			<div class="section_division"></div>
-			<div id="memberships_image"></div>
-			<div id="memberships_content">
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris.
-				</p>
-				<button>READ MORE</button>
-			</div>
-		</section>
+    <!-- Become a member section -->
+    <section>
+      <h2 class="hidden">Become a member!</h2>
+      <h2 id="about_title">BECOME A MEMBER TODAY</h2>
+      <div class="section_division"></div>
+      <div id="become_image"></div>
+      <div id="become_content">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris.
+        </p>
+        <button>READ MORE</button>
+      </div>
+    </section>
 
-	<!-- Membership section -->
-	<section>
-		<h2 class="hidden">Sponsors section</h2>
-		<h2 id="sponsors_title">SPECIAL THANKS TO</h2>
-		<div class="section_division"></div>
-		<div id="sponsors_logos_container">
-			<!-- Guillevin -->
-			<a href="https://www.guillevin.com/default/" target="_blank">
-				<img id="guillevin" src="images/logo-guillevin.jpg" alt="Guillevin logo">
-			</a>
-			<!-- Melchers -->
-			<a href="https://www.melchersconstruction.com/" target="_blank">
-				<img id="melchers" src="images/logo-melchers.jpg" alt="Melchers logo">
-			</a>
-			<!-- Muma -->
-			<a href="http://www.mumamanufacturing.com/" target="_blank">
-				<img id="muma" src="images/logo-muma.jpg" alt="Muma logo">
-			</a>
-			<!-- Try Recycling -->
-			<a href="http://tryrecycling.com/" target="_blank">
-				<img id="recycling" src="images/logo-try_recycling.jpg" alt="Try recycling logo">
-			</a>
-			<!-- Angling Sports -->
-			<a href="https://anglingsports.ca/" target="_blank">
-				<img id="angling" src="images/logo-angling_sports.jpg" alt="Angling Sports logo">
-			</a>
-		</div>
-	</section>
-	</main>
+    <!-- Meet the team -->
+    <section>
+      <h2 class="hidden">Team members information</h2>
+      <h2 id="team_title">MEET THE TEAM</h2>
+      <div class="section_division"></div>
+      <div id="team_info">
+      <!-- member 1 -->
+          <img src="images/headshot_placeholder.jpg" alt="Team member photo">
+          <h2>NAME OF THE PERSON</h2>
+          <h3>TITLE</h3>
 
-	<!-- FOOTER starts -->
+      <!-- member 2 -->
+          <img src="images/headshot_placeholder.jpg" alt="Team member photo">
+          <h2>NAME OF THE PERSON</h2>
+          <h3>TITLE</h3>
+
+      <!-- member 3 -->
+          <img src="images/headshot_placeholder.jpg" alt="Team member photo">
+          <h2>NAME OF THE PERSON</h2>
+          <h3>TITLE</h3>
+
+      <!-- member 4 -->
+          <img src="images/headshot_placeholder.jpg" alt="Team member photo">
+          <h2>NAME OF THE PERSON</h2>
+          <h3>TITLE</h3>
+
+      <!-- member 5 -->
+          <img src="images/headshot_placeholder.jpg" alt="Team member photo">
+          <h2>NAME OF THE PERSON</h2>
+          <h3>TITLE</h3>
+
+      </div>
+    </section>
+  </main>
+
+
+  <!-- FOOTER starts -->
 	<footer id="main_footer">
 		<!-- social media icons (footer) -->
 		<section id="social_media_footer">
