--- a/projects.html
+++ b/projects.html
@@ -23,12 +23,12 @@
 
 			<div id="burgerContent">
 				<ul class="burgerMenu">
-					<li><a href="index.html">HOME</a></li>
+          <li><a href="index.html">HOME</a></li>
 					<li><a href="aboutUs.html">ABOUT US</a></li>
-					<li><a href="#">PROJECTS</a></li>
-					<li><a href="#">GET INVOLVED</a></li>
-					<li><a href="#">NEWSLETTERS</a></li>
-					<li><a href="contactus.html">CONTACT US</a></li>
+					<li><a href="projects.html">PROJECTS</a></li>
+					<li><a href="getInvolved.html">GET INVOLVED</a></li>
+					<li><a href="newsletters.html">NEWSLETTERS</a></li>
+					<li><a href="contactUs.html">CONTACT US</a></li>
 				</ul>
 			</div>
 		</nav>
