--- a/aboutUs.html
+++ b/aboutUs.html
@@ -5,9 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.1/css/all.css">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/>
+	<!-- <link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/> -->
 
 	<title>Thames River Anglers Assosiation</title>
 </head>
@@ -34,6 +35,7 @@
 		</nav>
 
 		<!-- social media icons (header) -->
+		<!-- Facebook -->
 		<section id="social_media_header">
 			<h2 class="hidden">Social Media Icons</h2>
 			<div id="facebook_header">
@@ -41,6 +43,7 @@
 					<img src="images/facebook.png" alt="facebook icon" >
 				</a>
 			</div>
+	<!-- Email -->
 			<div id="email_header">
 				<a href="mailto:traa@anglers.org">
 					<img src="images/email_logo.png" alt="email icon">
@@ -81,12 +84,34 @@
     <!-- Events collapsibles -->
     <section id="events_collapsibles">
       <h2 class="hidden">Events details</h2>
+			<!-- Collapsible 1 -->
       <div class="collapsible_1">
-          <img src="images/about-project_1.png" alt="T.R.A.A. volunteers measuring a trout">
-      </div>
+				<h2>NAME OF EVENT</h2>
+				<h3>DATE</h3>
+				<i class="fas fa-chevron-down arrow_one"></i>
+			</div>
+			<div class="collapsible_1_content">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris.
+				</p>
+			</div>
+
+			<!-- Collapsible 2 -->
       <div class="collapsible_2">
-        <img src="images/projects-project_2.png" alt="T.R.A.A. volunteers collecting samples">
-      </div>
+				<h2>NAME OF EVENT</h2>
+				<h3>DATE</h3>
+				<i class="fas fa-chevron-down arrow_two"></i>
+			</div>
+			<div class="collapsible_2_content">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris.
+				</p>
+			</div>
+
     </section>
 
     <!-- Become a member section -->
