Get Involved collapsible

--- a/getInvolved.html
+++ b/getInvolved.html
@@ -5,9 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.1/css/all.css">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/>
+	<!-- <link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/> -->
 
 	<title>Thames River Anglers Assosiation</title>
 </head>
@@ -99,11 +100,19 @@
     <!-- Useful links section -->
     <section>
       <h2 class="hidden">Useful links</h2>
-      <h2 id="about_title">USEFUL LINKS AND INFORMATION</h2>
-      <!-- THIS SHOULD BE A COLLAPSIBLE -->
-      <div id="links_collapsible">
-        <img src="images/about-about_section_bg.png" alt="Thames River">
-      </div>
+
+			<!-- Collapsible 1 Links-->
+      <div class="collapsible_1">
+				<h2>USEFUL LINKS AND INFORMATION</h2>
+				<i class="fas fa-chevron-down arrow_one"></i>
+			</div>
+			<div class="collapsible_1_content">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris.
+				</p>
+			</div>
     </section>
 
     <!-- Get involved section -->
