--- a/projects.html
+++ b/projects.html
@@ -5,9 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.1/css/all.css">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/>
+	<!-- <link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/> -->
 
 	<title>Thames River Anglers Assosiation</title>
 </head>
@@ -79,17 +80,37 @@
     <!-- Projects collapsibles -->
     <section>
       <h2 class="hidden">Events details</h2>
-      <!-- collapsible 1 -->
-      <div id="event_1">
-        <h2>NAME OF EVENT</h2>
-        <h3>DATE</h3>
-      </div>
+			
+			<!-- Collapsible 1 Projects-->
+      <div class="collapsible_1">
+				<h2>NAME OF EVENT</h2>
+				<h3>DATE</h3>
+				<i class="fas fa-chevron-down arrow_one"></i>
+			</div>
+			<div class="collapsible_1_content">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris.
+				</p>
+			</div>
 
-      <!-- collapsible 2 -->
-      <div id="event_2">
-        <h2>NAME OF EVENT</h2>
-        <h3>DATE</h3>
-      </div>
+			<!-- Collapsible 2 Projects-->
+			<div class="collapsible_2">
+				<h2>NAME OF EVENT</h2>
+				<h3>DATE</h3>
+				<i class="fas fa-chevron-down arrow_two"></i>
+			</div>
+			<div class="collapsible_2_content">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris.
+				</p>
+			</div>
+		</section>
+
+
 
       <!-- collapsible 3 -->
       <div id="event_3">
