collapsibles issue fixed

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -85,7 +85,7 @@
     <section id="events_collapsibles">
       <h2 class="hidden">Events details</h2>
 			<!-- Collapsible 1 -->
-      <div class="collapsible_1">
+      <div class="collapsible_1 col_event_bcg">
 				<h2>NAME OF EVENT</h2>
 				<h3>DATE</h3>
 				<i class="fas fa-chevron-down arrow_one"></i>
@@ -99,7 +99,7 @@
 			</div>
 
 			<!-- Collapsible 2 -->
-      <div class="collapsible_2">
+      <div class="collapsible_2 col_event2_bcg">
 				<h2>NAME OF EVENT</h2>
 				<h3>DATE</h3>
 				<i class="fas fa-chevron-down arrow_two"></i>
