--- a/projects.html
+++ b/projects.html
@@ -80,9 +80,9 @@
     <!-- Projects collapsibles -->
     <section>
       <h2 class="hidden">Events details</h2>
-			
+
 			<!-- Collapsible 1 Projects-->
-      <div class="collapsible_1">
+      <div class="collapsible_1 col_proj_bcg">
 				<h2>NAME OF EVENT</h2>
 				<h3>DATE</h3>
 				<i class="fas fa-chevron-down arrow_one"></i>
@@ -96,7 +96,7 @@
 			</div>
 
 			<!-- Collapsible 2 Projects-->
-			<div class="collapsible_2">
+			<div class="collapsible_2 col_proj2_bcg">
 				<h2>NAME OF EVENT</h2>
 				<h3>DATE</h3>
 				<i class="fas fa-chevron-down arrow_two"></i>
@@ -108,21 +108,34 @@
 					quis nostrud exercitation ullamco laboris.
 				</p>
 			</div>
-		</section>
 
+		<!-- Collapsible 3 Projects-->
+		<div class="collapsible_3 col_proj3_bcg">
+			<h2>NAME OF EVENT</h2>
+			<h3>DATE</h3>
+			<i class="fas fa-chevron-down arrow_three"></i>
+		</div>
+		<div class="collapsible_3_content">
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris.
+			</p>
+		</div>
 
-
-      <!-- collapsible 3 -->
-      <div id="event_3">
-        <h2>NAME OF EVENT</h2>
-        <h3>DATE</h3>
-      </div>
-
-      <!-- collapsible 4 -->
-      <div id="event_4">
-        <h2>NAME OF EVENT</h2>
-        <h3>DATE</h3>
-      </div>
+		<!-- Collapsible 4 Projects-->
+		<div class="collapsible_4 col_proj4_bcg">
+			<h2>NAME OF EVENT</h2>
+			<h3>DATE</h3>
+			<i class="fas fa-chevron-down arrow_four"></i>
+		</div>
+		<div class="collapsible_4_content">
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris.
+			</p>
+		</div>
 
     </section>
   </main>
