--- a/getInvolved.html
+++ b/getInvolved.html
@@ -101,12 +101,12 @@
     <section>
       <h2 class="hidden">Useful links</h2>
 
-			<!-- Collapsible 1 Links-->
-      <div class="collapsible_1">
+			<!-- Collapsible 1 -->
+      <div class="collapsible_1 col_links_bcg">
 				<h2>USEFUL LINKS AND INFORMATION</h2>
 				<i class="fas fa-chevron-down arrow_one"></i>
 			</div>
-			<div class="collapsible_1_content">
+			<div class="collapsible_1_content ">
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
