validator errors fixed

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 
 			<!-- Events carousel -->
 			<section id="carousel_container">
+				<h2 class="hidden">Events carousel</h2>
 				<div id="carousel_images" style="right: 0">
 					<img src="images/become_a_member.png" alt="T.R.A.A. volunteers working">
 					<img src="images/get_involved-memberships_info.png" alt="T.R.A.A. volunteer holding a trout">
