about us - desktop

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -72,7 +72,7 @@
       <h2 class="hidden">About the T.R.A.A.</h2>
       <h2 id="about_title">WHO IS THE T.R.A.A.</h2>
       <div class="section_division"></div>
-      <div id="about_content">
+      <div id="about_content" class="about_content_desktop">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -119,15 +119,17 @@
       <h2 class="hidden">Become a member!</h2>
       <h2 id="about_title">BECOME A MEMBER TODAY</h2>
       <div class="section_division"></div>
-      <div id="become_image"></div>
-      <div id="become_content">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris.
-        </p>
-        <button>READ MORE</button>
-      </div>
+			<div class="about_member_flex">
+				<div id="become_image"></div>
+	      <div id="become_content">
+	        <p>
+	          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	          quis nostrud exercitation ullamco laboris.
+	        </p>
+	        <button>READ MORE</button>
+	      </div>
+			</div>
     </section>
 
     <!-- Meet the team -->
@@ -138,28 +140,38 @@
       <div id="team_info">
       <!-- member 1 -->
           <img src="images/headshot_placeholder.jpg" alt="Team member photo">
-          <h2>NAME OF THE PERSON</h2>
-          <h3>TITLE</h3>
+					<div class="team_info_1">
+						<h2>NAME OF THE PERSON</h2>
+	          <h3>TITLE</h3>
+					</div>
 
       <!-- member 2 -->
           <img src="images/headshot_placeholder.jpg" alt="Team member photo">
-          <h2>NAME OF THE PERSON</h2>
-          <h3>TITLE</h3>
+					<div class="team_info_2">
+						<h2>NAME OF THE PERSON</h2>
+	          <h3>TITLE</h3>
+					</div>
 
       <!-- member 3 -->
           <img src="images/headshot_placeholder.jpg" alt="Team member photo">
-          <h2>NAME OF THE PERSON</h2>
-          <h3>TITLE</h3>
+					<div class="team_info_3">
+						<h2>NAME OF THE PERSON</h2>
+	          <h3>TITLE</h3>
+					</div>
 
       <!-- member 4 -->
           <img src="images/headshot_placeholder.jpg" alt="Team member photo">
-          <h2>NAME OF THE PERSON</h2>
-          <h3>TITLE</h3>
+					<div class="team_info_4">
+						<h2>NAME OF THE PERSON</h2>
+	          <h3>TITLE</h3>
+					</div>
 
       <!-- member 5 -->
           <img src="images/headshot_placeholder.jpg" alt="Team member photo">
-          <h2>NAME OF THE PERSON</h2>
-          <h3>TITLE</h3>
+					<div class="team_info_5">
+						<h2>NAME OF THE PERSON</h2>
+	          <h3>TITLE</h3>
+					</div>
       </div>
     </section>
   </main>
