--- a/projects.html
+++ b/projects.html
@@ -163,10 +163,26 @@
         <img src="images/traa_logo-MASTER.svg" alt="TRAA logo">
       </a>
     </div>
+
+		<!-- main nav (desktop) footer -->
+		<nav>
+			<div>
+				<ul id="footerNav" class="hidden">
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="aboutUs.html">ABOUT US</a></li>
+					<li><a href="projects.html">PROJECTS</a></li>
+					<li><a href="getInvolved.html">GET INVOLVED</a></li>
+					<li><a href="newsletters.html">NEWSLETTERS</a></li>
+					<li><a href="contactUs.html">CONTACT US</a></li>
+				</ul>
+			</div>
+		</nav>
+
     <!-- back to top button -->
     <div id="back_to_top">
       <a href="#">Back to top</a>
     </div>
+		
     <!-- footer copyrights -->
     <div id="copyrights">
       <h3>© Marin-Riddick Enterprises</h3>
