--- a/getInvolved.html
+++ b/getInvolved.html
@@ -70,15 +70,18 @@
       <h2 class="hidden">How to get involved</h2>
       <h2 id="about_title">HOW TO GET INVOLVED</h2>
       <div class="section_division"></div>
-      <div id="involved_image"></div>
-      <div id="involved_content">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris.
-        </p>
-        <button>READ MORE</button>
-      </div>
+			<div class="involved_flex">
+				<div id="involved_image"></div>
+	      <div id="involved_content">
+	        <p>
+	          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris.
+	        </p>
+	        <button>READ MORE</button>
+	      </div>
+			</div>
+
     </section>
 
     <!-- Merchandise section -->
@@ -86,15 +89,17 @@
       <h2 class="hidden">Merchandise section</h2>
       <h2 id="about_title">MERCHANDISE</h2>
       <div class="section_division"></div>
-      <div id="merchandise_image"></div>
-      <div id="merchandise_content">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris.
-        </p>
-        <button>READ MORE</button>
-      </div>
+			<div class="merch_flex">
+				<div id="merchandise_image"></div>
+	      <div id="merchandise_content">
+	        <p>
+	          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris.
+	        </p>
+	        <button>READ MORE</button>
+	      </div>
+			</div>
     </section>
 
     <!-- Useful links section -->
@@ -174,6 +179,21 @@
         <img src="images/traa_logo-MASTER.svg" alt="TRAA logo">
       </a>
     </div>
+
+		<!-- main nav (desktop) footer -->
+		<nav>
+			<div>
+				<ul id="footerNav" class="hidden">
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="aboutUs.html">ABOUT US</a></li>
+					<li><a href="projects.html">PROJECTS</a></li>
+					<li><a href="getInvolved.html">GET INVOLVED</a></li>
+					<li><a href="newsletters.html">NEWSLETTERS</a></li>
+					<li><a href="contactUs.html">CONTACT US</a></li>
+				</ul>
+			</div>
+		</nav>
+
     <!-- back to top button -->
     <div id="back_to_top">
       <a href="#">Back to top</a>
